--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,13 @@ services:
     volumes:
       - ./laravel:/var/www
     ports:
-      - 80:80
-      - 443:443
+      - 8003:80
+      #- 443:443
     environment:
       WEB_DOCUMENT_ROOT: /var/www/public/
+    depends_on:
+      - rabbitmq
+      - db
   rabbitmq:
     image: rabbitmq:3-management-alpine
     ports:
@@ -29,7 +32,9 @@ services:
     image: mysql:8
     platform: linux/x86_64
     restart: always
-    command: --default-authentication-plugin=mysql_native_password
+    command: --mysql-native-password=ON
+    ports:
+      - 3309:3306
     environment:
       MYSQL_DATABASE: 'db'
       MYSQL_USER: 'user'
