--- a/node/package.json
+++ b/node/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "NODE_ENV=test jest",
     "dev": "nodemon index.js"
   },
   "author": "",
@@ -12,5 +12,11 @@
   "dependencies": {
     "amqplib": "^0.10.4",
     "nodemon": "^2.0.15"
+  },
+  "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "amqplib-mock": "^0.0.5",
+    "jest": "^29.7.0",
+    "jest-mock": "^29.7.0"
   }
 }
