--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     image: rabbitmq:3-management-alpine
     ports:
       - 15672:15672
+      - 5672:5672
     volumes:
       - rabbitmq_data:/var/lib/rabbitmq
   redis:
@@ -28,6 +29,8 @@ services:
       - ./node:/app
     working_dir: /app
     command: sh -c "/usr/local/bin/npm i --prefix /app && /usr/local/bin/npm run dev --prefix /app"
+    depends_on:
+      - rabbitmq
   db:
     image: mysql:8
     platform: linux/x86_64
