--- a/node/package.json
+++ b/node/package.json
@@ -2,10 +2,12 @@
   "name": "email-service",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/consumer.ts",
   "scripts": {
-    "test": "NODE_ENV=test jest",
-    "dev": "nodemon index.js"
+    "test": "cross-env NODE_ENV=test jest",
+    "dev": "nodemon --exec ts-node src/consumer.ts",
+    "build": "tsc",
+    "start": "node dist/index.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,8 +17,14 @@
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
+    "@types/amqplib": "^0.10.5",
+    "@types/jest": "^29.5.12",
     "amqplib-mock": "^0.0.5",
+    "cross-env": "^7.0.3",
     "jest": "^29.7.0",
-    "jest-mock": "^29.7.0"
+    "jest-mock": "^29.7.0",
+    "ts-jest": "^29.1.5",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.2"
   }
 }
